# Serum

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
Serum.Tests/include/Serum.Tests/: TestResolver.hpp  TestSerumConstructableType.hpp  TestType.hpp
Serum.Tests/src/: Serum.Tests.cpp  SerumContainerTests.cpp  SerumExceptionTests.cpp
Serum.Tests/src/Bindings/: BindingKeyTests.cpp  ConstantBindingTests.cpp  ConstructorBindingTests.cpp  FunctionBindingTests.cpp  ResolverBindingTests.cpp
Serum.Tests/src/Internal/: AnyBindingWrapperTests.cpp  TypeTraitsTests.cpp
Serum/include/Serum/: ResolutionContext.hpp  Serum.hpp  SerumContainer.hpp  SerumException.hpp  SerumResolver.hpp
Serum/include/Serum/Bindings/: Binding.hpp  BindingKey.hpp  BindingType.hpp  ConstantBinding.hpp  ConstructorBinding.hpp  FunctionBinding.hpp  ResolverBinding.hpp  SingletonBinding.hpp
Serum/include/Serum/Internal/: AnyBindingWrapper.hpp  Common.hpp  TypeTraits.hpp
